Move some files  around

--- a/src/prod-page.tmpl
+++ b/src/prod-page.tmpl
@@ -5,6 +5,9 @@
   <html lang="en">
     <head>
       <title>{$name} @ {$url}</title>
+      <style>
+        {$css|noAutoescape}
+      </style>
     </head>
     <body>
       <header>
